tenant and apartment added